--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "next": "^13.2.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-reveal": "^1.2.2",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
